fixed slight spacing issue with QnA

--- a/src/App.css
+++ b/src/App.css
@@ -754,8 +754,6 @@ button.QnAButton {
 #QuestionAnswerSet {
   width: 100%;
   /* border-bottom: 1px solid #dee2e6; */
-  margin: 3%;
-  padding: 2%;
 }
 
 .table tr {
